@@ -72,13 +72,13 @@ COMMAND	commands[]=
 	{"ping"				,PING, 0},
 	{"tcp_count"			,EXECUTE, "netstat -tn|grep EST|wc -l"},
 
-	{"net[listen_21]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':21 '|wc -l"},
-	{"net[listen_22]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':22 '|wc -l"},
-	{"net[listen_23]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':23 '|wc -l"},
-	{"net[listen_25]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':25 '|wc -l"},
-	{"net[listen_80]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':80 '|wc -l"},
-	{"net[listen_110]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':110 '|wc -l"},
-	{"net[listen_143]"		,EXECUTE, "netstat -ln|grep tcp|grep -v grep|grep ':143 '|wc -l"},
+	{"net[listen_21]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':21 '|wc -l"},
+	{"net[listen_22]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':22 '|wc -l"},
+	{"net[listen_23]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':23 '|wc -l"},
+	{"net[listen_25]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':25 '|wc -l"},
+	{"net[listen_80]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':80 '|wc -l"},
+	{"net[listen_110]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':110 '|wc -l"},
+	{"net[listen_143]"		,EXECUTE, "netstat -lnt|grep -v grep|grep ':143 '|wc -l"},
 	{0				,0}
 	};
 
